--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi[standart]>=0.120.1",
     "flask>=3.1.2",
-    "flask-restx>=1.3.2",
+    "flask-smorest>=0.46.2",
     "uvicorn>=0.38.0",
 ]
